k8s/components/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: networking
  labels:
    app.kubernetes.io/name: whoami
    homelab/stack: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
