k8s/components/whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: networking
  labels:
    app.kubernetes.io/name: whoami
    homelab/stack: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: networking
  labels:
    app.kubernetes.io/name: whoami
    homelab/stack: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
